Adding android test support